# llm-robot

./: LICENSE.txt  README.md  openapi.json  openapi.yaml  pyproject.toml
dc-component-extras/: pyproject.toml
dc-component-extras/src/dc_custom_component/robot/: tool.py
llm-hexapot/: pyproject.toml
llm-hexapot/src/llm_hexapot/: __about__.py  __init__.py  check.py
llm-hexapot/src/llm_hexapot/freenove/: Server.py  test.py
llm_hexapot/: api.py  check.py  run.py
llm_hexapot/freenove/: ADC.py  ADCDevice.py  Buzzer.py  Control.py  IMU.py  Kalman.py  Led.py  PID.py  Server.py  Servo.py  Ultrasonic.py  main.py  myCode.py  test.py
llm_hexapot/service/: battery_service.py  buzzer_service.py  led_service.py  move.py  move_service.py  servo_service.py
robot/: LICENSE  README.md  pyproject.toml  sadffff.json
robot/llm_hexapot/: api.py  check.py  run.py
robot/llm_hexapot/freenove/: Buzzer.py  Control.py  IMU.py  Led.py  PID.py  Server.py  Ultrasonic.py  main.py  myCode.py  test.py
robot/llm_hexapot/service/: camera_service.py  led_service.py  ultrasonic_service.py
